--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
               <span class="caret"></span>
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
+              <li><a href="#">Zach</a></li>
+              <li><a href="#">Is better</a></li>
+              <li><a href="#">Than david</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
+              <li><a href="#">^very true</a></li>
             </ul>
           </div>
         </div>		             
