--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
 
       <div class="row row-1">
-        <div class="col-xs-4 col-xs-offset-1">
+        <div class="col-xs-9 col-xs-offset-1">
           <h2>
             Row 2, column 1 rocks!
             <span class="glyphicon glyphicon-btc" aria-hidden="true"></span>
@@ -40,7 +40,7 @@
         </div>
 
         <div class="col-xs-2 color-3">          
-          <input type="text" class="btn btn-warning btn-4" value="Don't push me cause I'm close to the edge..." />          
+          <input type="vall" class="btn btn-danger btn-4" value="Don't push me cause I'm close to the edge..." />          
         </div>
       </div>
             
