--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           </h2>
         </div>
 
-        <div class="col-xs-2 color-3">          
-          <input type="button" class="btn btn-danger btn-4" value="Don't push me cause I'm close to the edge..." />          
+        <div class="col-xs-8 color-3">          
+          <input type="button" class="btn btn-danger btn-4" value="" />          
         </div>
       </div>
             
