--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
 
       <div class="row row-1">
-        <div class="col-xs-9 col-xs-offset-1">
+        <div class="col-xs-9 ">
           <h2>
             Row 2, column 1 rocks!
             <span class="glyphicon glyphicon-btc" aria-hidden="true"></span>
