--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <span class="caret"></span>
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-              <li><a href="#">Zach</a></li>
+              <li><a href="#index.html">What I have learned</a></li>
               <li><a href="#">Is better</a></li>
               <li><a href="#">Than david</a></li>
               <li role="separator" class="divider"></li>
